[package]
name = "cougar_scouting_app_match_scout_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
redis = "0.22.3"
once_cell = "1.15.0"
sentry = "0.29.2"