[package]
name = "r1403_vison"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
redis = "0.22.3"
once_cell = "1.15.0"
sentry = { version = "0.30.0", features = ["profiling"] }
log = "0.4.17"
dotenv = "0.15.0"
log4rs = "1.2.0"
dotenv_codegen = "0.15.0"
rayon = "1.6.1"
openssl = "0.10.45"
